--- a/app/assets/stylesheets/styles/tables.scss
+++ b/app/assets/stylesheets/styles/tables.scss
@@ -12,58 +12,58 @@
   h2 {
     text-align :center;
   }
-  table, td, th { 
-    vertical-align: middle; 
-    //border: none;
-    padding: 0;
-    margin: 0;
-    text-align: left;
-    border-spacing: 0;
-    width:100%;
-  }
+  table:not(.ui-datepicker-calendar) {
+    td, th { 
+      vertical-align: middle; 
+      //border: none;
+      padding: 0;
+      margin: 0;
+      text-align: left;
+      border-spacing: 0;
+      width:100%;
+    }
 
-  td.row-actions, th.row-actions {
-    text-align:center;
-    text-decoration: none;
-  }
+    td.row-actions, th.row-actions {
+      text-align:center;
+      text-decoration: none;
+    }
 
-
-
-
-  td, th {
-    padding: 12px 0;
-    font-weight: 400;
-    min-width: 120px;
-    color: #888;
-  }
-  
-  td {
-  	width:25%;
-  	border-top:1px solid #DCDCDC;
-  }
+    td, th {
+      padding: 12px 0;
+      font-weight: 400;
+      min-width: 120px;
+      color: #888;
+    }
+    
+    td {
+      width:25%;
+      border-top:1px solid #DCDCDC;
+    }
 
 
-  th { 
-    width: 200px;
-    //border-bottom: 1px solid #DDD; 
-  }
-  table img { 
-    width:100px;
+    th { 
+      width: 200px;
+      //border-bottom: 1px solid #DDD; 
+    }
+    img { 
+      width:100px;
+    }
+
+    tr.disabled td{
+      text-decoration: line-through;
+
+      td.row-actions {
+      text-decoration: none;
+
+      }
+    }
+
+
   }
 
 	
 }
 
-table {
-  tr.disabled td{
-    text-decoration: line-through;
-
-    td.row-actions {
-    text-decoration: none;
-
-    }
-  }
-}
 
 
 .table-actions {
